# cpp-package-boilerplate

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  README.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: ci.yml  docker.yml  docs.yml  release.yml
benchmarks/: CMakeLists.txt  bench_mylib.cpp
cmake/: CompilerOptions.cmake
docs/: CMakeLists.txt  Doxyfile.in
include/cpp_package_boilerplate/: package.hpp
scripts/: build.sh  format.sh  install_tools.sh
src/: CMakeLists.txt  main.cpp  mylib.cpp
tests/: CMakeLists.txt  test_mylib.cpp
